# LOS

./: CMakeLists.txt  CMakePresets.json
src/: boot.s  kernel.cpp  kernel.ld
src/boot/: gdt.hpp  gdt.s  info.hpp  init.hpp  tss.hpp
src/container/: prealloc_list_pool.hpp
src/gdt/: gdt.hpp  init.hpp  tss.hpp
src/io/: vga.hpp
src/lib/: algorithm.hpp  string.hpp
src/memory/: memory.hpp  new.cpp  new.hpp
